...
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_button"
                android:gravity="left|center"
                android:text="@string/editProfileTitle"
                android:textSize="14dp" />
...
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/changePassButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_button"
                android:gravity="left|center"
                android:text="@string/changeSecurityCodeTitle"
                android:textSize="14dp" />
...
