<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/pinEntry"
        android:layout_margin="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:inputType="number"
        android:maxLength="6"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:pinCharacterMask="•"
        app:pinAnimationType="popIn"/>

</FrameLayout>